--- a/requirements.txt
+++ b/requirements.txt
@@ -47,3 +47,8 @@ setuptools>=70.0.0 # Snyk vulnerability fix
 # mss  # screenshots
 # albumentations>=1.0.3
 # pycocotools>=2.0.6  # COCO mAP
+
+
+# Add gunicorn and python-dotenv for deployment
+gunicorn>=20.1.0
+python-dotenv>=1.0.0
