Se actualiza archivo render.yaml.

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,5 @@ services:
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn object_recognition_game2:app"
-    envVars:
-      - key: PORT
-        value: "5001"
+    startCommand: "gunicorn object_recognition_game3:app --bind 0.0.0.0:$PORT"
+
