--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ build-backend = "setuptools.build_meta"
 
 # Project settings -----------------------------------------------------------------------------------------------------
 [project]
-version = "7.0.0"
+version = "7.0.1"  # Update version to reflect new release.
 name = "YOLOv5"
 description = "Ultralytics YOLOv5 for SOTA object detection, instance segmentation and image classification."
 readme = "README.md"
@@ -78,7 +78,7 @@ dependencies = [
     "thop>=0.1.1", # FLOPs computation
     "pandas>=1.1.4",
     "seaborn>=0.11.0", # plotting
-    "ultralytics>=8.1.47"
+    "ultralytics>=8.2.34"  # Ensure the latest stable version is installed
 ]
 
 # Optional dependencies ------------------------------------------------------------------------------------------------
@@ -102,11 +102,6 @@ export = [
     "tensorflow>=2.0.0", # TF bug https://github.com/ultralytics/ultralytics/issues/5161
     "tensorflowjs>=3.9.0", # TF.js export, automatically installs tensorflow
 ]
-# tensorflow>=2.4.1,<=2.13.1  # TF exports (-cpu, -aarch64, -macos)
-# tflite-support  # for TFLite model metadata
-# scikit-learn==0.19.2  # CoreML quantization
-# nvidia-pyindex  # TensorRT export
-# nvidia-tensorrt  # TensorRT export
 logging = [
     "comet", # https://docs.ultralytics.com/integrations/comet/
     "tensorboard>=2.13.0",
@@ -145,3 +140,4 @@ close-quotes-on-newline = true
 [tool.codespell]
 ignore-words-list = "crate,nd,strack,dota,ane,segway,fo,gool,winn,commend"
 skip = '*.csv,*venv*,docs/??/,docs/mkdocs_??.yml'
+
